--- a/Hate_speech_detection.ipynb
+++ b/Hate_speech_detection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYzU96+m6ZgW06kVFXRLlR",
+      "authorship_tag": "ABX9TyOfgI9fHFYUFp4YUJkFYrWk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +30,9 @@
       "cell_type": "markdown",
       "source": [
         "# libraries to be imported\n",
-        "<ol>\n",
-        "1.   pandas - analyse, clean,explore and manipulate the dataset\n",
-        "2.   re or regex - A RegEx, or Regular Expression, is a sequence of characters that forms a search pattern. RegEx can be used to check if a string contains the specified search pattern.\n",
-        "3. nltk\n"
+        "1.   pandas - analyse, clean,explore and manipulate the dataset .<br>\n",
+        "2.   re or regex - A RegEx, or Regular Expression, is a sequence of characters that forms a search pattern. RegEx can be used to check if a string contains the specified search pattern.<br>\n",
+        "3. nltk- natural language transformer kit.<br>\n"
       ],
       "metadata": {
         "id": "Tbb4d1WZTMYp"
