--- a/Hate_speech_detection.ipynb
+++ b/Hate_speech_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1i6Hz4z113Wwde2D64tThwN4EFrI-wzpi",
-      "authorship_tag": "ABX9TyNAJH1wdKfPMzkouT6PqX/e",
+      "authorship_tag": "ABX9TyP5hcu3CT4Fwgl0f8OjFJh4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,23 +197,23 @@
       "source": [
         "<h2> Explaination of regex given above</h2>\n",
         "<ul>\n",
-        "<li> <h3> HTML func regex = r\"&(#\\d+|#x[a-fA-F0-9]+|[a-zA-Z]+)</h3>\n",
+        "<li> <h3> HTML func regex = r\"&(#\\d+|#x[a-fA-F0-9]+|[a-zA-Z]+)\n",
         "  <ul> <li>r stands to tell that the text is raw\n",
         "      <li>  #\\d tells for numeric references eg &#12345\n",
         "      <li> #x[a-fA-F0-9] tells for hexadecimal numeric references\n",
         "      <li> [a-zA-Z] mathces named entities &amp, &lt\n",
         "  </ul>\n",
-        "<li><h3> user tags func = r\"@\\w+\"<h3>\n",
+        "<li><h3> user tags func = r\"@\\w+\"\n",
         "  <ul> <li> \\w stands for  all alphanumeric letters and _\n",
         "        <li> example \"Hey @john_doe, check this out! Also, @alice123 and @user.test are here.\" changes to \"Hey user, check this out! Also, user and user are here.\"\n",
         "  </ul>\n",
-        "<li><h3> url func = r\"https?://\\S+|www\\.\\S+\"<h3>\n",
+        "<li><h3> url func = r\"https?://\\S+|www\\.\\S+\"\n",
         "  <ul> <li> https? means the s in last is optional. hence it mathces to both http and https.\n",
         "      <li> \\S+ matches any additional string\n",
         "      <li> www\\.\\S+ matches for all url in for www.dsfdjskn.com\n",
         "      <li> flag=re.IGNORECASE means it matches irrespective of case of letters\n",
         "  </ul>\n",
-        "<li> <h3> remove noise func</h3>\n",
+        "<li> <h3> remove noise func\n",
         "  <ul> <li> removes \", ', !' or two and more dots\n",
         "  </ul>\n"
       ],
