--- a/Hate_speech_detection.ipynb
+++ b/Hate_speech_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1i6Hz4z113Wwde2D64tThwN4EFrI-wzpi",
-      "authorship_tag": "ABX9TyP5hcu3CT4Fwgl0f8OjFJh4",
+      "authorship_tag": "ABX9TyPJD9oy2J00ekr7Mw575/x9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,11 +55,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<h1> 1) importing libraries\n",
+        "<h1> 1) importing libraries</h1>\n",
         "<ol>\n",
-        "<li>   pandas - analyse, clean,explore and manipulate the dataset .<br>\n",
-        "<li>  re or regex - A RegEx, or Regular Expression, is a sequence of characters that forms a search pattern. RegEx can be used to check if a string contains the specified search pattern.<br>\n",
-        "<li> nltk- natural language transformer kit.<br>\n"
+        "<li> <h3>  pandas - analyse, clean,explore and manipulate the dataset .<br>\n",
+        "<li>  <h3> re or regex - A RegEx, or Regular Expression, is a sequence of characters that forms a search pattern. RegEx can be used to check if a string contains the specified search pattern.<br>\n",
+        "<li> <h3> nltk- natural language transformer kit.<br>\n"
       ],
       "metadata": {
         "id": "Tbb4d1WZTMYp"
