--- a/Hate_speech_detection.ipynb
+++ b/Hate_speech_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1i6Hz4z113Wwde2D64tThwN4EFrI-wzpi",
-      "authorship_tag": "ABX9TyMTfIP/OD5fzQQoyyBxm6cu",
+      "authorship_tag": "ABX9TyP3tWhynlpTW20B7VXRPYz2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -206,7 +206,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 811
+          "height": 756
         },
         "id": "ggOWOSJX3eFr",
         "outputId": "07e8c2f8-789b-4390-cfd6-68f473541eda"
@@ -348,7 +348,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<h1> 4) splitting the data into training and testing"
+        "<h1> 4) splitting the data into training and testing</h1>\n",
+        "\n",
+        "\n",
+        "<h3> Building vocabulary</h3>\n",
+        "*   Vocabulary= number of unique words in dataset\n",
+        "*   build the vocabulary based on training dataset\n",
+        "\n"
       ],
       "metadata": {
         "id": "Uen0TXbAjtO9"
@@ -357,10 +363,64 @@
     {
       "cell_type": "code",
       "source": [
-        "x_train,x_test,y_train,y_test=train_test_split()"
+        "x_train,x_test,y_train,y_test=train_test_split(updated_tweet,labels,train_size=0.75,random_state=40)\n",
+        "tokenizer=Tokenizer() #creates an instance of keras tokenizer\n",
+        "tokenizer.fit_on_test(x_train) # mathces each unique word in x_train to integer index\n",
+        "x_train=tokenizer.text_to_sequence(x_train) #convert all words in x_train to index from vocabulary\n",
+        "x_test=tokenizer.text_to_sequence(x_test)\n"
       ],
       "metadata": {
         "id": "jymqbSySimXF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " <h3> Padding the data</h3>\n",
+        " we need to pad the training and testing data as neural networks require the inputs to be of equal lenght. we can take the maximul length of any sequence, whether in training or testing data( hence orignal unsplit data is used)"
+      ],
+      "metadata": {
+        "id": "KvJItA6yAKNi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max_len=max(len(seq) for seq in updated_tweet)\n",
+        "x_train=pad_sequences(x_train, maxLen=max_len,padding='post')\n",
+        "x_test=pad_sequences(x_test, maxLen=max_len,padding='post')"
+      ],
+      "metadata": {
+        "id": "_on_lCdI9m8v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<h3> One Hot Encoding</h3>\n",
+        "One hot encoding is used for followig purposes\n",
+        "\n",
+        "\n",
+        "*   Neural Networks expect categorical outputs in OHE format\n",
+        "*   OHE treats them as independet categories. Example : avoids mistake of comparing 2>1>0 as they are non comparable\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "dVYTw69rBBqP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_train=to_categorical(y_train)\n",
+        "y_test=to_categorical(y_test)\n"
+      ],
+      "metadata": {
+        "id": "Tw9GZBJiBoPF"
       },
       "execution_count": null,
       "outputs": []
